--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>                    
             </div>
             <div class="d-block">
-                <h1 class="p-2"> Grand Theft Auto: Vice City </h1>
+                <h1 class="p-2"><i class="fa-solid fa-home"></i>Grand Theft Auto: Vice City </h1>
                 <hr>
                 <div class="row p-2">
                     <div class="col-12 col-md-8">
