--- a/gameplay.html
+++ b/gameplay.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>                    
             </div>
-            <div class="d-block">
+            <div class="d-block container">
                 <h1 class="p-2"> Gameplay </h1>
                 <hr>
                 <div class="row p-2">
