--- a/references.html
+++ b/references.html
@@ -45,7 +45,7 @@
             
             <div class="d-block container">            
                 <nav id="navbar-example2" class="navbar bg-body-primary px-3 mb-3">
-                    <a class="navbar-brand" href="#"><h1>Notes</h1></a>
+                    <a class="navbar-brand" href="#"><h1>References</h1></a>
                     <ul class="nav nav-pills">                                                 
                     </ul>
                 </nav>                   
