--- a/references.html
+++ b/references.html
@@ -47,7 +47,9 @@
                 <nav id="navbar-example2" class="navbar bg-body-primary px-3 mb-3">
                     <a class="navbar-brand" href="#"><h1>References</h1></a>
                     <ul class="nav nav-pills">
-                                                                         
+                        <li class="nav-item">
+                            <a class="nav-link" href="#subHeading1">Sources</a>
+                        </li>                                      
                     </ul>
                 </nav>                   
                 <hr>                
