--- a/development.html
+++ b/development.html
@@ -63,7 +63,7 @@
                 <hr>
 
                 
-                <div style="height:320px"  data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="container overflow-auto scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
+                <div style="height:320px"  data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="container overflow-auto scrollspy-example bg-body-white p-3 rounded-2" tabindex="0">
                 <div class="row p-2">
                     <span class="col-12 col-sm-8">The player may run, jump, or drive vehicles to navigate the game's world. The player uses melee attacks, firearms and explosives to fight enemies. The firearms include weapons such as the Colt Python, an M60 machine gun and a Minigun.[6][7] The game's three-dimension environment allows a first-person view while aiming with the sniper rifle and rocket launcher. In addition, the game's combat allows the player to commit drive-by shootings by facing sideways in a vehicle.[8][9] A wide variety of weapon options can be purchased from local firearms dealers, found on the ground, retrieved from dead enemies, or found around the city.[10]
                     </span>
