header format align

--- a/gameplay.html
+++ b/gameplay.html
@@ -44,7 +44,12 @@
                 </div>                    
             </div>
             <div class="d-block container">
-                <h1 class="p-2"> Gameplay </h1>
+                <nav id="navbar-example2" class="navbar bg-body-primary px-3 mb-3">
+                    <a class="navbar-brand" href="#"><h1>Gameplay</h1></a>
+                    <ul class="nav nav-pills">
+                                               
+                    </ul>
+                </nav>
                 <hr>
                 <div style="height:320px" class="container overflow-auto">
                 <div class="row p-2">
