photo added and changes made to sales and Recetion pages

--- a/reception.html
+++ b/reception.html
@@ -107,7 +107,7 @@
                                             <td>Score</td>
                                         </tr>
                                         <tr>
-                                            <td>Metacritic</td>
+                                            <td><a href="https://en.wikipedia.org/wiki/Metacritic" target="_blank"> Metacritic </a></td>
                                             <td>95/100</td>
                                         </tr>
                                         <tr class="table-primary">
@@ -118,35 +118,35 @@
                                             <td>Score</td>
                                         </tr>
                                         <tr>
-                                            <td>AllGame</td>
+                                            <td><a href="https://en.wikipedia.org/wiki/RhythmOne#AllGame" target="_blank"> AllGame </a></td>
                                             <td>—</td>
                                         </tr>
                                         <tr>
-                                            <td>Edge</td>
+                                            <td><a href="https://en.wikipedia.org/wiki/Edge_(magazine)" target="_blank"> Edge </a></td>
                                             <td>8/10</td>
                                         </tr>
                                         <tr>
-                                            <td>Eurogamer</td>
+                                            <td><a href="https://en.wikipedia.org/wiki/Eurogamer" target="_blank"> Eurogamer </a></td>
                                             <td>10/10</td>
                                         </tr>
                                         <tr>
-                                            <td>Game Informer</td>
+                                            <td><a href="https://en.wikipedia.org/wiki/Game_Informer" target="_blank"> Game Informer </a></td>
                                             <td>10/10</td>
                                         </tr>
                                         <tr>
-                                            <td>GameRevolution</td>
+                                            <td><a href="https://en.wikipedia.org/wiki/Mandatory_(company)" target="_blank"> GameRevolution </a></td>
                                             <td>A</td>
                                         </tr>
                                         <tr>
-                                            <td>GameSpot</td>
+                                            <td><a href="https://en.wikipedia.org/wiki/GameSpot" target="_blank"> GameSpot </a></td>
                                             <td>9.6/10</td>
                                         </tr>
                                         <tr>
-                                            <td>GameSpy</td>
+                                            <td><a href="https://en.wikipedia.org/wiki/GameSpy" target="_blank"> GameSpy </a></td>
                                             <td>95/100</td>
                                         </tr>
                                         <tr>
-                                            <td>IGN</td>
+                                            <td><a href="https://en.wikipedia.org/wiki/IGN" target="_blank"> IGN </a></td>
                                             <td>9.7/10</td>
                                         </tr>
                                     </tbody>
@@ -157,7 +157,7 @@
                 </div>
             </div>    
         <footer class="footer mt-auto py-3 bg-light">
-            &copy 2020 GTA-Theft. All rights reserved.
+            &copy 2025 GTA-Theft. All rights reserved.
         </footer>   
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
